@@ -1,2 +1,2 @@
-readme.txt can be found in under resources\language\<language> (fallback to english if your language doesn't exist)
+Full readme.txt can be found in resources\language\<language> (fallback to english if your language doesn't exist)
 View using Menu Menu within script.
